--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.11.0",
